--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to chatty appy!</title>
+        <title>Chatty Appy</title>
     </head>
     <body>
         <div class = "container">
             <div class = "jumbotron">
-                <h1>Chatty App!</h1>
+                <h1>Chatty Appy!</h1>
             </div>
             <form id="input-form" class="form-inline">
                 <div class="form-group">
@@ -32,5 +32,5 @@
             <div id="chat-text"></div>
         </div>
     </body>
-    
+    <script type="text/javascript" src="app.js"></script>
 </html>
